changing chatbox input size to prevent zooming on iphone

--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -921,6 +921,7 @@ img{
   padding: 10px 10px;
   border-radius: 30px;
   text-align: left;
+  font-size: 16.1px;
 }
 
 .chatbox__send--footer {
